# PW_hw13

./: .env  docker_compose.yml  main.py  prakt.ipynb  pyproject.toml
src/conf/: config.py
src/database/: db.py
src/repository/: todos.py  users.py
src/routes/: auth.py  todos.py  users.py
src/schemas/: todo.py  user.py
src/services/: auth.py  email.py  roles.py
